fixed margin problem on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,22 @@ a:hover {
     padding: 0;
   }
 
+  .no-hover:hover {
+    margin-bottom: 0;
+  }
+
+  .small-margin-content:hover {
+    margin-bottom: 30px;
+  }
+
+  .medium-margin-content:hover{
+    margin-bottom: 70px;
+  }
+
+  .large-margin-content:hover {
+    margin-bottom: 180px;
+  }
+
   p{
     padding: 5px 5px 5px 25px;
   }
